testdata/baselines/reference/submodule/conformance/jsdocTypeReferenceToImport.errors.txt
jsdocTypeReferenceToImport.js(3,12): error TS2749: 'C' refers to a value, but is being used as a type here. Did you mean 'typeof C'?
jsdocTypeReferenceToImport.js(8,12): error TS2749: 'D' refers to a value, but is being used as a type here. Did you mean 'typeof D'?


==== jsdocTypeReferenceToImport.js (2 errors) ====
    const C = require('./ex').C;
    const D = require('./ex')?.C;
    /** @type {C} c */
               ~
!!! error TS2749: 'C' refers to a value, but is being used as a type here. Did you mean 'typeof C'?
    var c = new C()
    c.start
    c.end
    
    /** @type {D} c */
               ~
!!! error TS2749: 'D' refers to a value, but is being used as a type here. Did you mean 'typeof D'?
    var d = new D()
    d.start
    d.end
    
==== ex.d.ts (0 errors) ====
    export class C {
        start: number
        end: number
    }
    